2008-10-23  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.h: don't #include
	"libgimpwidgets/gimpwidgets.h".

	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell-scale.c
	* app/tools/gimpeditselectiontool.c: include it here.

2008-10-23  Sven Neumann  <sven@gimp.org>

	Bug 556896 – Dialogs don't get minimized with single image window

	* app/display/gimpdisplay-foreach.[ch]: added utility function to
	get the number of visible (not withdrawn or iconified) displays.

	* app/widgets/gimpdialogfactory.[ch]: added functions to hide and
	show the dock windows. Changed gimp_dialog_factories_toggle() to
	use the new functions.

	* app/display/gimpdisplayshell.c
	(gimp_display_shell_window_state_event): hide the docks if the
	last display is iconified. Unhide them if a display is
	uniconified. Probably needs more work ...

2008-10-23  Sven Neumann  <sven@gimp.org>

	* configure.in: removed check for Carbon and added a test for the
	target OS being Darwin instead.

	* app/config/gimpguiconfig.c: use PLATFORM_OSX instead of
	HAVE_CARBON to determine the default "web-browser" command.

2008-10-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.c (print_preview_leave_notify_event):
	check the crossing mode and don't unset the "inside" flag when the
	event is caused by a pointer grab/ungrab.

2008-10-22  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 556804 – Zoom drop down doesn't update

	* app/display/gimpdisplayshell-scale.c
	* app/display/gimpdisplayshell-callbacks.c: Fix calls to
	gimp_display_shell_scaled() when Resize window on zoom is enabled.

2008-10-22  Sven Neumann  <sven@gimp.org>

	Bug 524615 – Print not to scale

	* plug-ins/print/print.c: set the unit for dimensions on the Cairo
	context used for printing to GTK_UNIT_PIXELS.

	* plug-ins/print/print-draw-page.c (print_draw_page): changed the
	Cairo scale factors accordingly. Seems to fix printing on Windows.

2008-10-22  Sven Neumann  <sven@gimp.org>
